# csa_lab3

./: README.md  golden_test.py  isa.py  machine.py  program.json  pyproject.toml  translator.py
.github/workflows/: python.yaml
golden/: cat.yml  hello_user.yml  hello_world.yml  prob1.yml
