[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = ""
authors = ["larentina <118663828+larentiina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"
mypy = "^1.0.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
